--- a/app/css/main.css
+++ b/app/css/main.css
@@ -89,6 +89,11 @@ body {
     text-align: center;
 }
 
+.sidebar .options button {
+  border: none;
+  background: none;
+}
+
 .main-content {
  margin: 0;
  padding: 0!important;
