--- a/app/src/client/css/main.css
+++ b/app/src/client/css/main.css
@@ -7,21 +7,25 @@ html {
   font-size: 14px;
 }
 
+h1 {
+  font-size: 2rem!important;
+}
+
 @include media-breakpoint-up(sm) {
   html {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
 @include media-breakpoint-up(md) {
   html {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
 
 @include media-breakpoint-up(lg) {
   html {
-    font-size: 28px;
+    font-size: 18px;
   }
 }
 
@@ -51,17 +55,26 @@ html {
   position: fixed;
   top: 0;
   bottom: 0;
-  width: 240px;
-  background: #19191B;
+  width: 200px;
+  background: #FFF;
   color: white;
   padding-top: 55px;
   margin-bottom: 0;
   padding-left: 10px;
-  /*border-right: 1px solid #DADADA;*/
+  border-right: 1px solid #DADADA;
 }
 
 #menu a {
-  color:white;
+  color:#504E4E;
+}
+
+.add-proj-icon {
+  float: right;
+  margin-right: 21px;
+  width: 25px;
+  height: 25px;
+  background: url(../src/client/icons/add-proj-icon.svg) no-repeat top left;
+
 }
 
 #menu > div {
@@ -82,8 +95,8 @@ html {
 #content {
   width: 100%;
   margin: 0 auto;
-  padding-left: 259px;
-  padding-right: 20px;
+  padding-left: 230px;
+  padding-right: 30px;
   /*border: 5px solid #96BAC5;*/
   /*background: lightblue;*/
 }
@@ -115,7 +128,10 @@ html {
 .card {
   min-height: 145px;
   margin-bottom: 15px;
-  background: #F3F3F3!important;
+  /*background: #F3F3F3!important;*/
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top: 4px solid #9393F5;
 }
 
 #addBody {
@@ -153,7 +169,7 @@ html {
   border-bottom: 1px solid #F1F1F3;
     padding: 10px 9px 10px 9px;
     margin-bottom: 20px;
-    margin: 0 -20px 20px -19px;
+    margin: 0 -20px 20px -60px;
     text-align: right;
     min-height: 44px;
 }
@@ -191,7 +207,6 @@ ul, li {
 }*/
 
 #servers {
-    margin-bottom: 35px;
     margin-top: 35px;
 }
 
@@ -217,4 +232,8 @@ ul, li {
   margin: 2em;
   width: 300px;
   height: 300px;
+}
+
+#databases {
+  margin-top: 40px;
 }
